--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "NodeJS Playground - Where we do a lot of NodeJS related experiments",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+"start": "node index.js"
+ },
   "author": "Sharadamani",
   "license": "MIT"
 }
