--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "NodeJS Playground - Where we do a lot of NodeJS related experiments",
   "main": "index.js",
   "scripts": {
-"start": "node index.js"
- },
+    "start": "node src/index.ts"
+  },
   "author": "Sharadamani",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^5.8.2"
+  }
 }
